--- a/battles.html
+++ b/battles.html
@@ -591,7 +591,7 @@
             <div class="small muted">Win Amount: ${fmt(b.winAmount)} • ID: ${b.id}</div>
             <div class="row" style="margin-top:10px;">
               ${mine
-                ? `<button class="btn-danger btn full" data-action="cancel" data-id="${b.id}" type="button">Cancel (Refund to Cash)</button>`
+                ? `<button class="btn-danger btn full" data-action="cancel" data-id="${b.id}" type="button">Cancel (Refund)</button>`
                 : `<button class="btn btn-gold full" data-action="join" data-id="${b.id}" type="button">Join Battle</button>`}
             </div>
           </div>
