--- a/battles.html
+++ b/battles.html
@@ -244,6 +244,11 @@
       <li>50 rupay cut hoga galat screenshot dalne pe</li>
       <li>2% referral commission is credited to referrer cash wallet on successful completion.</li>
        <li>Humare platform par withdrawls 15 minutes ,e diya jata hai</li>
+            <li>AFreshi id nahi hai toh exit ya auto ex
+                 Agar 1 bhi goti 10 kadam chali h -> 100% win
+                 10 kadam se kam aur 1 goti open -> 30% win
+                 10 kadam se kam aur 2 goti open -> 50 % win
+                  3 ya 4 goti open -> 100% win</li>
     </ul>
     <button class="btn full" data-close-modal="rulesModal" type="button">Close</button>
   </section>
