--- a/battles.html
+++ b/battles.html
@@ -243,7 +243,7 @@
       <li>Agar samne wale theme Se khel raha he apko nahi khelna toh opponent ki 2 goti khulne se phele game screen recording karke game left kare</li>
       <li>50 rupay cut hoga galat screenshot dalne pe</li>
       <li>2% referral commission is credited to referrer cash wallet on successful completion.</li>
-       <li>Humare platform par withdrawls 15 minutes ,e diya jata hai</li>
+       <li>Humare platform par withdrawls 15 minutes me diya jata hai</li>
             <li>Freshi id nahi hai toh exit ya auto exit 
               
                  Agar 1 bhi goti 10 kadam chali h -> 100% win
