--- a/battles.html
+++ b/battles.html
@@ -244,7 +244,7 @@
       <li>50 rupay cut hoga galat screenshot dalne pe</li>
       <li>2% referral commission is credited to referrer cash wallet on successful completion.</li>
        <li>Humare platform par withdrawls 15 minutes me diya jata hai</li>
-            <li>Freshi id nahi hai toh exit ya auto exit 
+            <li>exit ya auto exit 
               
                  Agar 1 bhi goti 10 kadam chali h -> 100% win
               
