--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
       <nav class="bottom-nav">
         <a href="#" class="nav-item active">🏠<br>Home</a>
         <a href="battles.html" class="nav-item">🎮<br>Battles</a>
+        <a href="refer.html" class="nav-item">🎁<br>Refer</a>
         <a href="wallet.html" class="nav-item">💼<br>Wallet</a>
         <a href="profile.html" class="nav-item">👤<br>Profile</a>
       </nav>
