--- a/refer.html
+++ b/refer.html
@@ -80,7 +80,7 @@
   <div class="app">
     <div class="kyc-notice">
       <div class="kyc-icon">⚠️</div>
-      <span>Refer And Earn Ke Liye Aapko KYC Karna Jaruri Hai</span>
+      <span>Refer And Earn Ke Liye Aapko KYC Karna Jaruri Hai Yadi Nahi Hai Toh</span>
     </div>
     <div class="header">
       <a href="index.html" class="back-btn">←</a>
