--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
       <div style="padding:15px; background:white; margin:15px; border-radius:12px; border:1px solid #e2e8f0; color:var(--text-dark);">
         <strong>Refer & Earn</strong>
-        <p style="font-size:12px; margin:5px 0;">Share your phone number as referral code:</p>
+        <p style="font-size:12px; margin:5px 0;">Copy this link and share</p>
         <div id="myReferralLink" style="background:#f8fafc; padding:10px; border-radius:8px; font-size:13px; font-weight:700; border:1px dashed var(--accent);">Loading...</div>
       </div>
 
