--- a/refer.html
+++ b/refer.html
@@ -158,7 +158,7 @@
 
     // WhatsApp Action
     document.getElementById('whatsappBtn').onclick = () => {
-      const msg = `*SR LUDO* 🏆\n\nBhai, is link se Ludo khel aur har win pe paisa kama! Instant Withdrawals. ✅\n\nJoin here: ${myReferLink}`;
+      const msg = `*SR LUDO* 🏆\n\nBhai, is platform par ludo khelo 100% safe and trustable hai aur yaha toh refer karne ka lifetime paisa milta hai 2% commision abhi aa jao me bhi yahi khelta hu withdrawl bhi 15 minutes ke andar aa jata hai ✅\n\nJoin here: ${myReferLink}`;
       window.open(`https://wa.me/?text=${encodeURIComponent(msg)}`, '_blank');
     };
 
