--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>SR LUDO - Best Online Ludo Battle Arena | Real Cash Games</title>
+<meta name="title" content="SR LUDO - Best Online Ludo Battle Arena">
+<meta name="description" content="SR LUDO par real players ke sath Ludo battles khelo. Fast withdrawal, 2% referral bonus aur 24/7 support. Join the premium battle arena now!">
+<meta name="keywords" content="SR Ludo, Online Ludo, Ludo Cash Game, Real Money Ludo, Ludo Battle, Win Cash Ludo">
+
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://srludo.online/">
+<meta property="og:title" content="SR LUDO - Khelo aur Jeeto Real Cash">
+<meta property="og:description" content="Fastest withdrawal aur safe matches. Join karein India ka best Ludo platform.">
+<meta property="og:image" content="https://srludo.online/assets/logo.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SR LUDO | Premium Battle Arena</title>
