--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" href="classic2.png">
   <title>SR LUDO - Best Online Ludo Battle Arena | Real Cash Games</title>
 <meta name="title" content="SR LUDO - Best Online Ludo Battle Arena">
 <meta name="description" content="SR LUDO par real players ke sath Ludo battles khelo. Fast withdrawal, 2% referral bonus aur 24/7 support. Join the premium battle arena now!">
