--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
           <img src="logo.png" alt="Logo" class="nav-logo">
         </div>
         <div class="wallets">
-          <div class="pill cash-pill">Cash<strong id="cashAmount">₹0</strong></div>
+          <div class="pill cash-pill" onclick="window.location.href='wallet.html'" style="cursor: pointer;">Cash<strong id="cashAmount">₹0</strong></div>
+
           <div class="pill win-pill">Winning<strong id="winAmount">₹0</strong></div>
         </div>
       </header>
