--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@
         <div class="signin-wrap" style="margin-top: 15px;">
           <div class="pe_signin_button" data-client-id="17286597723145724436" data-theme="dark"></div>
         </div>
+        <div style="margin-top: 20px; font-size: 12px; color: #64748b; text-align: center;">
+    By continuing, you agree to our 
+    <a href="privacy.html" style="color: #2f7bff; text-decoration: none; font-weight: 600;">Privacy Policy</a>
+</div>
       </div>
     </section>
 
