--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <a href="privacy.html" style="color: #2f7bff; text-decoration: none; font-weight: 600;">Privacy Policy</a>
 </div>
         <div style="margin-top: 15px; padding: 10px; font-size: 11px; color: #64748b; background: #f8fafc; border-radius: 8px; text-align: center;">
-    <strong style="color: #ff3d4d;">⚠️ Warning:</strong> Is khel mein vittiy jokhim shamil hai aur iski aadat lag sakti hai. Sirf <strong>18+</strong> umar ke log hi khelein. 
+    <strong style="color: #ff3d4d;">⚠️ Warning:</strong>Humare Platform Par<strong>18+</strong> umar ke log hi khelein.
     <br>
     <a href="terms.html" style="color: #2f7bff; text-decoration: none;">Terms & Conditions</a>
 </div>
