--- a/profile.html
+++ b/profile.html
@@ -190,9 +190,9 @@
   </div>
 
   <script type="module">
-    import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js';
-    import { getDatabase, onValue, ref, update, set } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js';
-
+   import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js';
+import { getDatabase, onValue, ref, update, set } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js';
+import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js';
     const firebaseConfig = {
       apiKey: 'AIzaSyAx0fr47IsOtBxakcBj1ndwDYle_XlaE-Y',
       authDomain: 'sr-ludo-4440b.firebaseapp.com',
@@ -204,62 +204,50 @@
     };
 
     const IMGBB_API_KEY = window.IMGBB_API_KEY || localStorage.getItem('sr_ludo_imgbb_api_key') || 'ca44783bda6779b5e3913432bd243b30';
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
+  const app = initializeApp(firebaseConfig);
+  const db = getDatabase(app);
+  const auth = getAuth(app); // Auth initialize kiya
+  const IMGBB_API_KEY = 'ca44783bda6779b5e3913432bd243b30';
 
-    const phone = (localStorage.getItem('sr_ludo_phone') || '').trim();
-    if (!phone) {
+  // Global variables
+  let phone = "";
+  let userRef = null;
+
+  // HTML elements
+  const kycBadge = document.getElementById('kycBadge');
+  const fullNameInput = document.getElementById('fullNameInput');
+  const aadharNumberInput = document.getElementById('aadharNumberInput');
+  const aadharFileInput = document.getElementById('aadharFileInput');
+  const submitKycBtn = document.getElementById('submitKycBtn');
+  const upiInput = document.getElementById('upiInput');
+  const bankAccInput = document.getElementById('bankAccInput');
+  const ifscInput = document.getElementById('ifscInput');
+  const saveBankBtn = document.getElementById('saveBankBtn');
+  const lockMessage = document.getElementById('lockMessage');
+  const referralCodeInput = document.getElementById('referralCodeInput');
+  const copyReferralBtn = document.getElementById('copyReferralBtn');
+
+  // --- SURAKSHA CHAKRA START ---
+  onAuthStateChanged(auth, (user) => {
+    if (user) {
+      const userPrefix = user.email.split('@')[0];
+      phone = userPrefix.length === 10 ? "+91" + userPrefix : userPrefix;
+      localStorage.setItem('sr_ludo_phone', phone);
+      userRef = ref(db, `users/${phone}`);
+      
+      console.log("Profile authenticated as:", phone);
+      loadProfileData(); // User milne par data load karo
+    } else {
       window.location.href = 'index.html';
-      throw new Error('No phone found in localStorage.');
     }
+  });
 
-    const userRef = ref(db, `users/${phone}`);
-
-    const kycBadge = document.getElementById('kycBadge');
-    const fullNameInput = document.getElementById('fullNameInput');
-    const aadharNumberInput = document.getElementById('aadharNumberInput');
-    const aadharFileInput = document.getElementById('aadharFileInput');
-    const submitKycBtn = document.getElementById('submitKycBtn');
-    const upiInput = document.getElementById('upiInput');
-    const bankAccInput = document.getElementById('bankAccInput');
-    const ifscInput = document.getElementById('ifscInput');
-    const saveBankBtn = document.getElementById('saveBankBtn');
-    const lockMessage = document.getElementById('lockMessage');
-    const referralCodeInput = document.getElementById('referralCodeInput');
-    const copyReferralBtn = document.getElementById('copyReferralBtn');
-
-    function statusClass(status) {
-      if (status === 'verified') return 'verified';
-      if (status === 'rejected') return 'rejected';
-      return 'pending';
-    }
-
-    async function uploadToImgBB(file) {
-      const fd = new FormData();
-      fd.append('image', file);
-      const response = await fetch(`https://api.imgbb.com/1/upload?key=${IMGBB_API_KEY}`, {
-        method: 'POST',
-        body: fd
-      });
-      const data = await response.json();
-      if (!response.ok || !data?.success || !data?.data?.url) {
-        throw new Error(data?.error?.message || 'Image upload failed.');
-      }
-      return data.data.url;
-    }
-
-    function setBankLockState(isLocked) {
-      upiInput.disabled = isLocked;
-      bankAccInput.disabled = isLocked;
-      ifscInput.disabled = isLocked;
-      lockMessage.style.display = isLocked ? 'block' : 'none';
-      saveBankBtn.style.display = isLocked ? 'none' : 'block';
-    }
-
+  function loadProfileData() {
     onValue(userRef, (snapshot) => {
       const user = snapshot.val() || {};
       const kycStatus = (user.kyc_status || 'pending').toLowerCase();
 
+      // UI Update
       kycBadge.className = `badge ${statusClass(kycStatus)}`;
       kycBadge.textContent = kycStatus === 'verified' ? 'Verified ✅' : kycStatus.charAt(0).toUpperCase() + kycStatus.slice(1);
 
@@ -273,89 +261,90 @@
       const myReferralCode = user.myReferralCode || referralDigits;
       referralCodeInput.value = myReferralCode;
 
+      // Auto-set referral code if missing
       if (!user.myReferralCode) {
         update(userRef, { myReferralCode }).catch(() => {});
+        set(ref(db, `referral_codes/${myReferralCode}`), {
+          phone,
+          createdAt: Date.now()
+        }).catch(() => {});
       }
-      set(ref(db, `referral_codes/${myReferralCode}`), {
-        phone,
-        createdAt: user.time || Date.now()
-      }).catch(() => {});
 
       const lockBank = Boolean((user.upi_id || '').trim() || (user.bank_acc || '').trim() || (user.bank_ifsc || '').trim());
       setBankLockState(lockBank);
     });
+  }
 
-    submitKycBtn.addEventListener('click', async () => {
-      const fullName = fullNameInput.value.trim();
-      const aadharNo = aadharNumberInput.value.trim();
-      const file = aadharFileInput.files?.[0];
+  // --- HELPERS ---
+  function statusClass(status) {
+    if (status === 'verified') return 'verified';
+    if (status === 'rejected') return 'rejected';
+    return 'pending';
+  }
 
-      if (!fullName || !aadharNo || !file) {
-        alert('Please fill all KYC fields and upload Aadhar front photo.');
-        return;
-      }
+  function setBankLockState(isLocked) {
+    upiInput.disabled = isLocked;
+    bankAccInput.disabled = isLocked;
+    ifscInput.disabled = isLocked;
+    lockMessage.style.display = isLocked ? 'block' : 'none';
+    saveBankBtn.style.display = isLocked ? 'none' : 'block';
+  }
 
-      if (!/^\d{12}$/.test(aadharNo)) {
-        alert('Please enter a valid 12-digit Aadhar number.');
-        return;
-      }
+  async function uploadToImgBB(file) {
+    const fd = new FormData();
+    fd.append('image', file);
+    const response = await fetch(`https://api.imgbb.com/1/upload?key=${IMGBB_API_KEY}`, { method: 'POST', body: fd });
+    const data = await response.json();
+    if (!data?.success) throw new Error('Image upload failed.');
+    return data.data.url;
+  }
 
-      submitKycBtn.disabled = true;
-      submitKycBtn.textContent = 'Uploading...';
-      try {
-        const aadharUrl = await uploadToImgBB(file);
-        await update(userRef, {
-          full_name: fullName,
-          aadhar_no: aadharNo,
-          aadhar_url: aadharUrl,
-          aadhar_f: aadharUrl,
-          kyc_status: 'pending',
-          kyc_updated_at: Date.now()
-        });
-        alert('KYC submitted successfully. Status updated to pending.');
-        aadharFileInput.value = '';
-      } catch (error) {
-        console.error(error);
-        alert(error.message || 'KYC submit failed.');
-      } finally {
-        submitKycBtn.disabled = false;
-        submitKycBtn.textContent = 'Submit KYC';
-      }
+  // --- ACTIONS ---
+  submitKycBtn.onclick = async () => {
+    const fullName = fullNameInput.value.trim();
+    const aadharNo = aadharNumberInput.value.trim();
+    const file = aadharFileInput.files[0];
+
+    if (!fullName || !aadharNo || !file) return alert('Fill all fields!');
+    if (aadharNo.length !== 12) return alert('12-digit Aadhar required!');
+
+    submitKycBtn.disabled = true;
+    submitKycBtn.textContent = 'Uploading...';
+    try {
+      const url = await uploadToImgBB(file);
+      await update(userRef, {
+        full_name: fullName,
+        aadhar_no: aadharNo,
+        aadhar_url: url,
+        kyc_status: 'pending',
+        kyc_updated_at: Date.now()
+      });
+      alert('KYC submitted!');
+    } catch (e) { alert(e.message); }
+    finally { submitKycBtn.disabled = false; submitKycBtn.textContent = 'Submit KYC'; }
+  };
+
+  saveBankBtn.onclick = async () => {
+    const upiId = upiInput.value.trim();
+    const bankAcc = bankAccInput.value.trim();
+    const bankIfsc = ifscInput.value.trim().toUpperCase();
+
+    if (!upiId || !bankAcc || !bankIfsc) return alert('Fill all bank details!');
+
+    saveBankBtn.disabled = true;
+    try {
+      await update(userRef, { upi_id: upiId, bank_acc: bankAcc, bank_ifsc: bankIfsc, bank_saved_at: Date.now() });
+      alert('Bank details locked!');
+    } catch (e) { alert('Failed to save!'); }
+    finally { saveBankBtn.disabled = false; }
+  };
+
+  copyReferralBtn.onclick = () => {
+    navigator.clipboard.writeText(referralCodeInput.value).then(() => {
+      copyReferralBtn.textContent = 'Copied';
+      setTimeout(() => copyReferralBtn.textContent = 'Copy', 1200);
     });
-
-    saveBankBtn.addEventListener('click', async () => {
-      const upiId = upiInput.value.trim();
-      const bankAcc = bankAccInput.value.trim();
-      const bankIfsc = ifscInput.value.trim().toUpperCase();
-      if (!upiId || !bankAcc || !bankIfsc) {
-        alert('Please fill all bank/payment fields.');
-        return;
-      }
-
-      saveBankBtn.disabled = true;
-      saveBankBtn.textContent = 'Saving...';
-      try {
-        await update(userRef, {
-          upi_id: upiId,
-          bank_acc: bankAcc,
-          bank_ifsc: bankIfsc,
-          bank_saved_at: Date.now()
-        });
-        alert('Bank details saved and locked.');
-      } catch (error) {
-        console.error(error);
-        alert('Unable to save bank details. Please try again.');
-      } finally {
-        saveBankBtn.disabled = false;
-        saveBankBtn.textContent = 'Save Bank Details';
-      }
-    });
-
-    copyReferralBtn.addEventListener('click', async () => {
-      try {
-        await navigator.clipboard.writeText(referralCodeInput.value.trim());
-        copyReferralBtn.textContent = 'Copied';
-        setTimeout(() => { copyReferralBtn.textContent = 'Copy'; }, 1200);
+  };
       } catch {
         alert('Copy failed. Please copy manually.');
       }
