--- a/profile.html
+++ b/profile.html
@@ -189,27 +189,27 @@
     </main>
   </div>
 
-  <script type="module">
-   import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js';
-import { getDatabase, onValue, ref, update, set } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js';
-import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js';
-    const firebaseConfig = {
-      apiKey: 'AIzaSyAx0fr47IsOtBxakcBj1ndwDYle_XlaE-Y',
-      authDomain: 'sr-ludo-4440b.firebaseapp.com',
-      databaseURL: 'https://sr-ludo-4440b-default-rtdb.firebaseio.com',
-      projectId: 'sr-ludo-4440b',
-      storageBucket: 'sr-ludo-4440b.firebasestorage.app',
-      messagingSenderId: '1080387235822',
-      appId: '1:1080387235822:web:77faea231641837950e8ff'
-    };
+ <script type="module">
+  import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js';
+  import { getDatabase, onValue, ref, update, set } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js';
+  import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js';
 
-    const IMGBB_API_KEY = window.IMGBB_API_KEY || localStorage.getItem('sr_ludo_imgbb_api_key') || 'ca44783bda6779b5e3913432bd243b30';
+  const firebaseConfig = {
+    apiKey: 'AIzaSyAx0fr47IsOtBxakcBj1ndwDYle_XlaE-Y',
+    authDomain: 'sr-ludo-4440b.firebaseapp.com',
+    databaseURL: 'https://sr-ludo-4440b-default-rtdb.firebaseio.com',
+    projectId: 'sr-ludo-4440b',
+    storageBucket: 'sr-ludo-4440b.firebasestorage.app',
+    messagingSenderId: '1080387235822',
+    appId: '1:1080387235822:web:77faea231641837950e8ff'
+  };
+
+  // Initialization
   const app = initializeApp(firebaseConfig);
   const db = getDatabase(app);
-  const auth = getAuth(app); // Auth initialize kiya
+  const auth = getAuth(app);
   const IMGBB_API_KEY = 'ca44783bda6779b5e3913432bd243b30';
 
-  // Global variables
   let phone = "";
   let userRef = null;
 
@@ -227,16 +227,15 @@ import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/
   const referralCodeInput = document.getElementById('referralCodeInput');
   const copyReferralBtn = document.getElementById('copyReferralBtn');
 
-  // --- SURAKSHA CHAKRA START ---
+  // --- SURAKSHA CHAKRA (Auth Check) ---
   onAuthStateChanged(auth, (user) => {
     if (user) {
       const userPrefix = user.email.split('@')[0];
       phone = userPrefix.length === 10 ? "+91" + userPrefix : userPrefix;
-      localStorage.setItem('sr_ludo_phone', phone);
       userRef = ref(db, `users/${phone}`);
       
       console.log("Profile authenticated as:", phone);
-      loadProfileData(); // User milne par data load karo
+      loadProfileData(); 
     } else {
       window.location.href = 'index.html';
     }
@@ -261,21 +260,16 @@ import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/
       const myReferralCode = user.myReferralCode || referralDigits;
       referralCodeInput.value = myReferralCode;
 
-      // Auto-set referral code if missing
       if (!user.myReferralCode) {
         update(userRef, { myReferralCode }).catch(() => {});
-        set(ref(db, `referral_codes/${myReferralCode}`), {
-          phone,
-          createdAt: Date.now()
-        }).catch(() => {});
+        set(ref(db, `referral_codes/${myReferralCode}`), { phone, createdAt: Date.now() }).catch(() => {});
       }
 
-      const lockBank = Boolean((user.upi_id || '').trim() || (user.bank_acc || '').trim() || (user.bank_ifsc || '').trim());
+      const lockBank = Boolean((user.upi_id || '').trim() || (user.bank_acc || '').trim());
       setBankLockState(lockBank);
     });
   }
 
-  // --- HELPERS ---
   function statusClass(status) {
     if (status === 'verified') return 'verified';
     if (status === 'rejected') return 'rejected';
@@ -295,60 +289,45 @@ import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/
     fd.append('image', file);
     const response = await fetch(`https://api.imgbb.com/1/upload?key=${IMGBB_API_KEY}`, { method: 'POST', body: fd });
     const data = await response.json();
-    if (!data?.success) throw new Error('Image upload failed.');
+    if (!data?.success) throw new Error('Upload Failed');
     return data.data.url;
   }
 
-  // --- ACTIONS ---
   submitKycBtn.onclick = async () => {
-    const fullName = fullNameInput.value.trim();
-    const aadharNo = aadharNumberInput.value.trim();
     const file = aadharFileInput.files[0];
-
-    if (!fullName || !aadharNo || !file) return alert('Fill all fields!');
-    if (aadharNo.length !== 12) return alert('12-digit Aadhar required!');
-
+    if (!fullNameInput.value || !aadharNumberInput.value || !file) return alert('Sari details bharein!');
+    
     submitKycBtn.disabled = true;
     submitKycBtn.textContent = 'Uploading...';
     try {
       const url = await uploadToImgBB(file);
       await update(userRef, {
-        full_name: fullName,
-        aadhar_no: aadharNo,
+        full_name: fullNameInput.value,
+        aadhar_no: aadharNumberInput.value,
         aadhar_url: url,
-        kyc_status: 'pending',
-        kyc_updated_at: Date.now()
+        kyc_status: 'pending'
       });
-      alert('KYC submitted!');
-    } catch (e) { alert(e.message); }
+      alert('KYC Submit ho gaya!');
+    } catch (e) { alert('Galti: ' + e.message); }
     finally { submitKycBtn.disabled = false; submitKycBtn.textContent = 'Submit KYC'; }
   };
 
   saveBankBtn.onclick = async () => {
-    const upiId = upiInput.value.trim();
-    const bankAcc = bankAccInput.value.trim();
-    const bankIfsc = ifscInput.value.trim().toUpperCase();
-
-    if (!upiId || !bankAcc || !bankIfsc) return alert('Fill all bank details!');
-
+    if (!upiInput.value || !bankAccInput.value) return alert('Details bharein!');
     saveBankBtn.disabled = true;
     try {
-      await update(userRef, { upi_id: upiId, bank_acc: bankAcc, bank_ifsc: bankIfsc, bank_saved_at: Date.now() });
-      alert('Bank details locked!');
-    } catch (e) { alert('Failed to save!'); }
+      await update(userRef, { upi_id: upiInput.value, bank_acc: bankAccInput.value, bank_ifsc: ifscInput.value });
+      alert('Details Lock ho gayi!');
+    } catch (e) { alert('Error!'); }
     finally { saveBankBtn.disabled = false; }
   };
 
   copyReferralBtn.onclick = () => {
     navigator.clipboard.writeText(referralCodeInput.value).then(() => {
-      copyReferralBtn.textContent = 'Copied';
+      copyReferralBtn.textContent = 'Copied!';
       setTimeout(() => copyReferralBtn.textContent = 'Copy', 1200);
     });
   };
-      } catch {
-        alert('Copy failed. Please copy manually.');
-      }
-    });
-  </script>
+</script>
 </body>
 </html>
