--- a/profile.html
+++ b/profile.html
@@ -191,8 +191,8 @@
 
  <script type="module">
   import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js';
-  import { getDatabase, onValue, ref, update, set } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js';
-  import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js';
+import { getDatabase, onValue, ref, update, set, get } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js';
+   import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js';
 
   const firebaseConfig = {
     apiKey: 'AIzaSyAx0fr47IsOtBxakcBj1ndwDYle_XlaE-Y',
